--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">RedditMe</string>
     <string name="action_settings">Settings</string>
+    <string name="loremipsum">Lorem ipsum dolor sit amet, magna sed orci commodo mauris. Dui risus vel ut. Eu convallis lacus elit sed iaculis vitae, felis vel, in eget, felis porta eu nullam, enim enim ante vel qui. Gravida ligula ut non, ut in posuere elit justo amet. Dis nullam egestas lorem varius, nam pulvinar illo gravida vitae etiam justo.</string>
 </resources>
