--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,22 @@
 <resources>
     <string name="app_name">RedditMe</string>
     <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+
+    <!-- sidemenu item labels  -->
+    <!-- IS TO BE REMOVED ONCE WE GENERATE LIST OF SUBREDDITS STORED IN APP PREF-->
+    <string name="nav_item_frontpage">Frontpage</string>
+    <string name="nav_item_todayilearned">Today I Learned</string>
+    <string name="nav_item_askmeanything">Ask Me Anything</string>
+
+    <string-array name="nav_drawer_labels">
+        <item>@string/nav_item_frontpage</item>
+        <item>@string/nav_item_todayilearned</item>
+        <item>@string/nav_item_askmeanything</item>
+    </string-array>
+
     <string name="loremipsum">Lorem ipsum dolor sit amet, magna sed orci commodo mauris. Dui risus vel ut. Eu convallis lacus elit sed iaculis vitae, felis vel, in eget, felis porta eu nullam, enim enim ante vel qui. Gravida ligula ut non, ut in posuere elit justo amet. Dis nullam egestas lorem varius, nam pulvinar illo gravida vitae etiam justo.</string>
+
 </resources>
